tests/sksl/errors/SwizzleTooManyComponents.glsl
### Compilation failed:

error: 1: too many components in swizzle mask 'xxxxx'
1 error
